--- a/client/head.html
+++ b/client/head.html
@@ -1,5 +1,5 @@
 <head>
-  <title></title>
+  <title>撩一撩</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link rel="icon" href="/favicon.png" type="image/png">
 </head>
